Fixed double scroll on mobile

--- a/resources/sass/global/common.scss
+++ b/resources/sass/global/common.scss
@@ -97,6 +97,7 @@ body, #app {
 
 		.content {
 			width: 100%;
+			height: 100%;
 
 			.content-inner {
 				width: $content-inner-size-mobile;
